add studio preferences
first commit for preferences panel

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,13 @@
         ],
         "actions": [
             {
+                "name": "initPreferences",
+                "title": "Add studio Ionic preferences",
+                "trigger": [
+                    { "event": "onStudioStart" }
+                ]
+            },
+            {
                 "name": "checkDependencies",
                 "title": "Check studio Ionic dependencies",
                 "trigger": [
