--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "extension": 
     {
-        "name": "MobileCore",
+        "name": "wakanda-extension-mobile-core",
         "version": "1.0.0",
         "description": "Extesion for Mobile Ionic environnement",
         "icon": "icon.png",
